# espa-surface-water-extent

./: .gitignore  CMakeLists.txt  DSWE-algorithm-description.txt  DYNAMIC-SURFACE-WATER-EXTENT-LICENSE.txt  Dockerfile  LICENSE.txt  Makefile  Makefile.static  README.md  RPM.spec  build.dswe  build.dswe.static  date.c  get_args.c  make.config  myhdf.c  output.c  output.h  setup-build-environment.sh  surface_water_extent.c  swe.h  write_envi_hdr.c
RPM_spec_files/: RPM-CFBWD.spec  RPM-DSWE.spec  RPM.spec
cfmask-based-water-detection/: LICENSE.txt  Makefile  README.md
cfmask-based-water-detection/src/: Makefile  cfmask_water_detection.c  cfmask_water_detection.h  const.h  get_args.c  get_args.h  input.c  input.h  utilities.c  utilities.h
dswe/: Makefile  README.md  algorithm-description.md
dswe/prototype_implementation/: DSWE_P1_V2_ESPA_06_05_2017.py  DSWE_P3_V3_ESPA_using_CA_example.py  DSWE_preprocessing.py  linux_prototype.py
dswe/src/: Makefile  build_hillshade_band.c  const.h  dswe.c  dswe.h  get_args.c  get_args.h  output.c  output.h  utilities.h
not-validated-prototype-dswe/: DSWE-algorithm-description.txt  Makefile  Makefile.static  README.md  algorithm-description.md
not-validated-prototype-dswe/cmake-build/: dswe.cmake.config  dswe.cmake.config.static
not-validated-prototype-dswe/src/: Makefile  Makefile.static  build_hillshade_band.c  build_hillshade_band.h  build_slope_band.c  const.h  dswe.c  dswe.h  get_args.c  get_args.h  input.c  input.h  output.c  output.h
prototype_implementation/: ESPA_recode-1.rmp  Original-email-Algorithm-Description.txt  README
scripts/: CMakeLists.txt  Makefile  Makefile.static  do_dynamic_surface_water_extent.py  do_surface_water_extent.py  do_water_extent.py  surface_water_extent.py  surface_water_qa.py  test_swe.py
src/: CMakeLists.txt  FindESPALibXML2.cmake  Makefile  Makefile.static  SWE-LICENSE.txt  SWE-valgrind-suppression  bool.h  build_slope_band.c  build_slope_band.h  calculate_slope.c  const.h  date.c  date.h  dswe.c  dswe_const.h  dswe_input.c  dswe_input.h  dswe_output.c  dswe_output.h  error_handler.h  get_args.c  get_args.h  input.c  input.h  myhdf.c  myhdf.h  mystring.c  mystring.h  output.c  output.h  scene_based_swe.c  shaded_relief.c  shaded_relief.h  space.c  space.h  split_filename.c  surface_water_extent.c  swe.h  utilities.c  utilities.h  (+1 more)
